// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snippet allows usage of dot delimited path to access nested attribute 1`] = `

<span class="ais-snippet">
  nested
  <em>
    val
  </em>
</span>

`;

exports[`Snippet renders proper HTML 1`] = `

<span class="ais-snippet">
  con
  <em>
    ten
  </em>
  t
</span>

`;

exports[`Snippet should render an empty string in production if attribute is not snippeted 1`] = `

<span class="ais-snippet">
</span>

`;
